remove spaces from "tinyopenjam"

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>tiny open jam</title>
+    <title>tinyopenjam</title>
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
@@ -74,8 +74,7 @@
     </header>
 
     <h2>
-      what is a <span class="tiny">tiny</span> <span class="open">open</span>
-      <span class="jam">jam</span>?
+      what is a <span class="tiny">tiny</span><span class="open">open</span><span class="jam">jam</span>?
     </h2>
     <p>
       It's a plan of attack for accomplishing a project. The goal of a Tiny Open
@@ -114,8 +113,7 @@
     </p>
 
     <h2>
-      How can I start my own <span class="tiny">tiny</span> <span
-        class="open">open</span> <span class="jam">jam</span>?
+      How can I start my own <span class="tiny">tiny</span><span class="open">open</span><span class="jam">jam</span>?
     </h2>
 
     <p>
@@ -143,11 +141,9 @@
     <hr>
 
     <footer>
-      <span class="tiny">Tiny</span> <span class="open">Open</span> <span
-        class="jam">Jam</span> spawned from the mind of <a
-        href="https://www.heymrbass.com">Dan Bergren</a>. This site has been
-        worked on in <strong>1</strong> jam and counting.
-
+      <span class="tiny">Tiny</span><span class="open">Open</span><span class="jam">Jam</span>
+      spawned from the mind of <a href="https://www.heymrbass.com">Dan Bergren</a>.
+      This site has been worked on in <strong>1</strong> jam and counting.
         <div class="hand">
           o/
         </div>
