add tinyopenvideos, fix tag closing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-family: "Source Sans Pro", sans-serif;
         text-transform: lowercase;
         margin: 0 auto;
-        width: 900px;
+        max-width: 900px;
       }
 
       hr {
@@ -57,6 +57,11 @@
 
       .jam {
         color: #33c;
+      }
+
+      #tov-playlist {
+        width: 900px;
+        height: 563px;
       }
     </style>
   </head>
@@ -137,6 +142,22 @@
       <span class="jam">Jam</span> is just an attitude thing. Keep the three
       principles in mind while you work and you'll be good to go!
     </p>
+
+    <h2>
+      I need help getting started on a project.
+    </h2>
+
+    <p>
+      we recently created <a
+        href="https://www.youtube.com/playlist?list=PLdXSy09brydz3SMM-8p8-6lRXMpLWKi6A"
+        target="_blank">tinyopenvideos</a> as a jumping-off point and <span class="open">open</span>
+      guide for those who don't know how to get started. each video can be considered
+      its own <span class="jam">jam</span> and should be <span class="tiny">tiny</span>
+      enough to complete.
+    </p>
+
+    <iframe id="tov-playlist" src="https://www.youtube.com/embed/videoseries?list=PLdXSy09brydz3SMM-8p8-6lRXMpLWKi6A"
+      frameborder="0" allowfullscreen></iframe>
 
     <hr>
 
