--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
     <footer>
       <span class="tiny">Tiny</span><span class="open">Open</span><span class="jam">Jam</span>
       spawned from the mind of <a href="https://www.heymrbass.com">Dan Bergren</a>.
-      This site has been worked on in <strong>2</strong> jam and counting.
+      This site has been worked on in <a href="https://github.com/tinyopenjam/tinyopenjam.github.io/releases">3</a>
+      jams and counting.
         <div class="hand">
           o/
         </div>
