--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
       focused on getting your work done.
     </p>
     <p>
-      The rest of <span class="tiny">Tiny</span> <span class="open">Open</span>
-      <span class="jam">Jam</span> is just an attitude thing. Keep the three
-      principles in mind while you work and you'll be good to go!
+      The rest of <span class="tiny">Tiny</span><span class="open">Open</span><span class="jam">Jam</span>
+      is just an attitude thing. Keep the three principles in mind while you work
+      and you'll be good to go!
     </p>
 
     <h2>
